Fix z-index for nav

--- a/app/assets/stylesheets/base/greeting.scss
+++ b/app/assets/stylesheets/base/greeting.scss
@@ -28,6 +28,7 @@
   width: 100%;
   height: 90px;
   background-color: rgba(0, 0, 0, 0.5);
+  z-index: 99999;
 }
 
 .logo {
@@ -35,7 +36,6 @@
   left: 25px;
   width: 200px;
   position: absolute;
-  z-index: 100;
 }
 
 .nav-login {
